# portalcut

./: .gitignore  README.md  Untitled.ipynb  configs.py  conifgs.py  kitti-test.ipynb  kitti_annotations.csv  kitti_dataset.py  main.py  pyproject.toml  pytorch_models.ipynb  test.py  train_annotations.csv  val_annotations.csv
detection/: augmented_model.ipynb  augmentv2m_train.py  augmentv3_train.py  configs.py  custom_engine.py  data_utils.py  dataloader.py  dataset_benchmarking.ipynb  datasets.py  engine.py  evals.py  main.py  models.py  shahir_guided.ipynb  system_check.ipynb  testing_model.ipynb  utils.py  waymo_utils.py
detection/results/: results_notebook.ipynb
detection/results/fasterrcnn_resnet50_fpn/: results.json
detection/results/fasterrcnn_resnet50_fpn_v2/: results.json
detection/results/kitti_augmented_fasterrcnn_mobilenet_v3_large_320_fpn_5/: results.json
detection/results/kitti_augmented_fasterrcnn_mobilenet_v3_large_320_fpn_5_pretrained_frozen_layers/: results.json
detection/results/kitti_fasterrcnn_mobilenet_v3_large_320_fpn_10/: results.json
detection/results/kitti_fasterrcnn_mobilenet_v3_large_320_fpn_10_pretrained/: results.json
detection/results/kitti_fasterrcnn_mobilenet_v3_large_320_fpn_10_pretrained_frozen_layers/: results.json
detection/results/kitti_fasterrcnn_mobilenet_v3_large_320_fpn_5/: results.json
detection/results/kitti_fasterrcnn_mobilenet_v3_large_320_fpn_5_pretrained/: results.json
tanmay/: augmentation.py  data_cleaning.py  remove_overlapping.py
tj/: TJ.ipynb  dataloader.py  general_utils.py  waymo_utils.py
(+81 files in other folders)
