[tool.poetry]
name = "portalcut"
version = "0.1.0"
description = ""
authors = ["sazzadi-r14 <sazzadi.cc9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
torch = "^2.3.0"
torchvision = "^0.18.0"
opencv-python = "^4.9.0.80"
tqdm = "^4.66.4"
ultralytics = "^8.2.18"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
tensorflow = "^2.16.1"
keras = "^3.3.3"
ipykernel = "^6.29.4"
albumentations = "^1.4.7"
pycocotools = "^2.0.7"
rich = "^13.7.1"
wandb = "^0.17.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
